--- a/css/sajo.css
+++ b/css/sajo.css
@@ -147,9 +147,10 @@
     border-radius: 10px;
     /* width: 150px;
     height: 40px; */
+    position: relative;
 }
 
-.header .banner_b .entrepreneur a{
+.header .banner_b .entrepreneur{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -169,6 +170,75 @@
     color: #fff;
 }
 
+.header .ent_box {
+    position: absolute;
+    top: 110%;
+    left: 49%;
+
+    width: 700px;
+    background: #002e6a;
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.header .ent_box.on {
+    opacity: 1;
+    visibility: visible;
+
+    z-index: 999;
+}
+
+.header .ent_box .e_inner {
+    padding: 40px;
+}
+
+.header .ent_box h2 {
+    font-size: 30px;
+    font-weight: 500;
+    color: #fff;
+
+    margin: 0 0 30px 0;
+}
+
+.header .ent_box .top {
+    display: flex;
+    gap: 15px;
+    margin: 0 0 30px 0;
+}
+
+.header .ent_box .top>li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 160px;
+    height: 160px;
+
+    border: 1px solid #fff;
+    border-radius: 50%;
+    /* padding: 40px; */
+    margin: 0 auto;
+    color: #fff;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.header .ent_box .bot>li:not(:last-child) {
+    margin: 0 0 10px 0;
+}
+
+.header .ent_box .bot span {
+    font-size: 16px;
+    font-weight: 400;
+    color: #fff;
+}
+
+.header .ent_box .bot .icon{
+    color: #1864b2;
+    font-size: 30px;
+    font-weight: 400;
+}
 
 .header .lnb_con .box {
     max-width: 1400px;
@@ -826,7 +896,7 @@
     color: #fff;
     padding: 10px 20px;
     border-radius: 20px;
-    font-size: 14px;
+    font-size: 12px;
 
     width: 130px;
     height: 40px;
