--- a/css/sajo.css
+++ b/css/sajo.css
@@ -156,6 +156,8 @@
     align-items: center;
     padding: 10px 20px;
     gap: 5px; 
+
+    cursor: pointer;
 }
 
 .header .banner_b .entrepreneur .d{
